--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Just having fun</title>
+    <!-- GitHub Pages deployment fix -->
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
@@ -23,3 +24,4 @@
     <script src="./script.js"></script>
 </body>
 </html>
+
