Fix link case sensitivity in index.html
Updated link in the button to point to 'yes.html' instead of 'Yes.html'.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>I know a spot!</p>
 
         <div class="btn">
-    <a href="Yes.html">Yes</a>
+    <a href="yes.html">Yes</a>
     <a href="#" id="move-random">No</a>
     </div>
     </div>
@@ -24,4 +24,5 @@
     <script src="./script.js"></script>
 </body>
 </html>
+
 
