--- a/yes.html
+++ b/yes.html
@@ -11,7 +11,9 @@
     <div class="container">
    <div class="tenor-gif-embed" data-postid="17492756541678823131" data-share-method="host" data-aspect-ratio="1.07937" data-width="100%"><a href="https://tenor.com/view/%EB%AA%A8%EC%B0%8C-%EB%AA%A8%EB%AA%A8%EC%B0%8C-%EB%AA%A8%EB%AA%A8%EB%83%A5-%EA%B0%80%EC%9E%90-gif-17492756541678823131">모찌 모모찌 GIF</a>from <a href="https://tenor.com/search/%EB%AA%A8%EC%B0%8C-gifs">모찌 GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 
-    <h1>You're in for a treat!</h1>   
+    <h1>You're in for a treat!</h1>
+    <p>Just dm me.</p>
     </div>
 </body>
+
 </html>
