--- a/no.html
+++ b/no.html
@@ -15,10 +15,11 @@
 
         <div class="btn">
     <a href="Yes.html">Yes</a>
-    <a href="no.html" id="move-random">No</a>
+    <a href="no.html">No</a>
     </div>
     </div>
 
     <script src="./script.js"></script>
 </body>
+
 </html>
