--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="tenor-gif-embed" data-postid="3769541006770861740" 
         data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/%EB%AA%A8%EB%AA%A8%EC%B0%8C-%ED%8C%94%EC%A7%9D%ED%8C%94%EC%A7%9D-%EC%8B%A0%EB%82%98-%EB%AA%A8%EC%B0%8C-%EB%AA%A8%EC%B0%8C-%EB%AA%A8%EB%AA%A8%EC%B0%8C-gif-3769541006770861740">모모찌 팔짝팔짝 Sticker</a>from <a href="https://tenor.com/search/%EB%AA%A8%EB%AA%A8%EC%B0%8C-stickers">모모찌 Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 
-    <h1>Wanna have some coffee?</h1>
+    <h1>Wanna grab some coffee?</h1>
     <p>I know a spot!</p>
 
         <div class="btn">
@@ -24,4 +24,5 @@
 
     <script src="./script.js"></script>
 </body>
+
 </html>
