--- a/no1.html
+++ b/no1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ask Her Out</title>
+    <title>Just having Fun</title>
 
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -25,8 +25,8 @@
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>Soch le ache se! 🙄</h1>
-      <p>Lorem ipsum dolor sit amet.</p>
+      <h1>You dont't wanna go?😒</h1>
+      <p>I'll just go alone then...</p>
 
       <div class="btn">
         <a href="yes.html">Yes</a>
@@ -35,3 +35,4 @@
     </div>
   </body>
 </html>
+
