--- a/no2.html
+++ b/no2.html
@@ -28,8 +28,8 @@
         src="https://tenor.com/embed.js"
       ></script>
 
-      <h1>Ek aur baar Soch le! 😣</h1>
-      <p>Lorem ipsum dolor sit amet.</p>
+      <h1>You really don't wanna go?? 😣</h1>
+      <p>I'll be lonely...</p>
 
       <div class="btn">
         <a href="yes.html">Yes</a>
@@ -38,3 +38,4 @@
     </div>
   </body>
 </html>
+
