--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div class="btn">
     <a href="#" id="yes-btn">Yes</a>
-    <a href="no1.html">No</a>
+    <a href="#" id="move-random">No</a>
     </div>
     </div>
 
