--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 </head>
 <body>
     <div class="container">
-    <div class="tenor-gif-embed" data-postid="3769541006770861740" 
-        data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/%EB%AA%A8%EB%AA%A8%EC%B0%8C-%ED%8C%94%EC%A7%9D%ED%8C%94%EC%A7%9D-%EC%8B%A0%EB%82%98-%EB%AA%A8%EC%B0%8C-%EB%AA%A8%EC%B0%8C-%EB%AA%A8%EB%AA%A8%EC%B0%8C-gif-3769541006770861740">모모찌 팔짝팔짝 Sticker</a>from <a href="https://tenor.com/search/%EB%AA%A8%EB%AA%A8%EC%B0%8C-stickers">모모찌 Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-
+    <div class="tenor-gif-embed" data-postid="8966130618592376508" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/rose-smell-smell-the-roses-smell-the-flowers-flowers-gif-8966130618592376508">Rose Smell Sticker</a>from <a href="https://tenor.com/search/rose-stickers">Rose Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
     <h1>Wanna grab some coffee?</h1>
     <p>I know a spot!</p>
 
@@ -26,4 +24,5 @@
 </body>
 
 </html>
+
 
