--- a/yes.html
+++ b/yes.html
@@ -15,7 +15,7 @@
     <p>hehehe</p>   
     
     <button id="confirm-btn" class="confirm-btn">Click here!</button>
-    <p id="message-sent" class="message-sent" style="display: none;">Hope you had fun! ✨</p>
+    <p id="message-sent" class="message-sent" style="display: none;">You sent a notice! 💕</p>
     
     <!-- Hidden form for Formspree -->
     <form id="spree-form" action="https://formspree.io/f/mreaopvl" method="POST" style="display: none;">
@@ -57,3 +57,4 @@
     </script>
 </body>
 </html>
+
